Json Debuffs